[gd_scene load_steps=10 format=2]

[ext_resource path="res://script/worm/segment_kinematic.gd" type="Script" id=1]
[ext_resource path="res://img/worm/segment_full_n.png" type="Texture" id=2]
[ext_resource path="res://img/worm/segment_full.png" type="Texture" id=4]
[ext_resource path="res://scene/DepthController.tscn" type="PackedScene" id=5]
[ext_resource path="res://scene/particles/DirtMotion.tscn" type="PackedScene" id=6]
[ext_resource path="res://scene/particles/DirtExplode.tscn" type="PackedScene" id=7]
[ext_resource path="res://scene/particles/BloodExplode.tscn" type="PackedScene" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 35.0
height = 46.0

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1 )

[node name="SegmentKinematic" type="KinematicBody2D"]
use_parent_material = true
collision_layer = 2
script = ExtResource( 1 )

[node name="colision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DirtMotion" parent="." instance=ExtResource( 6 )]
scale = Vector2( 0.5, 1 )
z_as_relative = false
emitting = false
amount = 36
lifetime = 0.7
scale_amount = 1.0
scale_amount_random = 0.0
color_ramp = SubResource( 2 )

[node name="image" type="Sprite" parent="."]
use_parent_material = true
rotation = 3.14159
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 4 )
normal_map = ExtResource( 2 )
flip_h = true

[node name="DirtExplode" parent="." instance=ExtResource( 7 )]
z_index = 10
emitting = false
lifetime = 2.0
one_shot = true
local_coords = false

[node name="BloodExplode" parent="." instance=ExtResource( 8 )]
scale = Vector2( 1.5, 1.5 )
z_index = 10
z_as_relative = false
color = Color( 0.11802, 0.0308, 0.28, 1 )

[node name="DepthController" parent="." instance=ExtResource( 5 )]

[node name="Tween" type="Tween" parent="."]

[node name="HitInvul" type="Timer" parent="."]
wait_time = 0.25
one_shot = true
